<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LYN RFID</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab1textview">掃描盤點</string>
    <string name="tab2textview">讀與寫</string>
    <string name="tab3textview">材料資訊</string>
    <string name="tab1_layout_button_start">開始</string>
    <string name="tab1_layout_button_stop">停止</string>
    <string name="tab1_layout_button_readclear">清除</string>
    <string name="tab1_layout_button_readset">上傳ERP </string>
    <string name="tab1_layout_button_total">總計 </string>
    <string name="tab1_layout_textView1">本次讀到標籤個數：</string>
    <string name="tab1_layout_textView2">        標籤個數：</string>
    <string name="tab1_layout_textView3">設備狀態：</string>
    <string name="tab1_layout_textView4">搜尋料號：</string>
    <string name="connectSec">連接成功</string>
    <string name="connectFalse">連接失敗</string>
    <string name="powerUpSec">上電成功</string>
    <string name="powerUpFalse">上電失敗</string>
    <string name="tab2_layout_button_read">讀取</string>
    <string name="tab2_layout_button_write">寫入</string>
    <string name="tab2_layout_button_encode">編碼</string>
    <string name="tab2_layout_button_decode">解碼</string>
    <string name="tab2_layout_textView_tag">標籤資訊</string>
    <string name="tab2_layout_textView_tag_decode">標籤解碼</string>
    <string name="tab2_layout_textView_conect">ERP連線</string>
    <string name="tab3_layout_textView_MatID">材料編號</string>
    <string name="tab3_layout_textView_MatNM">材料描述</string>
    <string name="tab3_layout_textView_MatPack">材料包裝序號</string>
    <string name="tab3_layout_textView_MatPackQty">材料包裝數量</string>
    <string name="tab3_layout_textView_MatTotalQty">材料庫存數量</string>
    <string name="tab3_layout_textView_MatMemo">材料備註</string>
    <string name="tab3_layout_textView_Docno">貨櫃號</string>
    <string name="tab3_layout_textView_Zsno">採購單號</string>   
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="reset">reset</string>
    <string name="login">login</string>
    <string name="process">processing</string>
    <string name="title_activity_dialog_updte_erp">DialogUpdteERPActivity</string>
    <string name="title_activity_dialogclbhtotalqty">Dialogclbhtotalqty</string>

</resources>
