<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab2_inv"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_read" />

        <Button
            android:id="@+id/button_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_write" />
        <Button
            android:id="@+id/button_encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_encode" />
        <Button
            android:id="@+id/button_decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_decode" />        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_layout_textView_tag" />

    </LinearLayout>

    <EditText
        android:id="@+id/edData_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
        <requestFocus />
    </EditText>
  
    
    <TabHost
            android:id="@+id/tabhost2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp" >

                    <LinearLayout
                        android:id="@+id/tab2_sub1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <include
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            layout="@layout/tab2_tablelayout_det1" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2_sub2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <include
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            layout="@layout/tab2_tablelayout_det2" />
                    </LinearLayout>


                </FrameLayout>
            </LinearLayout>
     </TabHost>
        
</LinearLayout>