<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/title"
        layout="@layout/title" />
        
    <include
        android:id="@+id/under"
        layout="@layout/under" />

    <RelativeLayout
        android:id="@+id/loginlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/bg_dark" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/login_item" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/account"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize" />
            </TableRow>

            <EditText
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edittextheight"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:background="@drawable/rounded_edittext"
                android:singleLine="true" />

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/login_item" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize" />
            </TableRow>

            <EditText
                android:id="@+id/passwd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edittextheight"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:background="@drawable/rounded_edittext"
                android:password="true"
                android:singleLine="true" />
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tableLayout1"
            android:layout_marginTop="66dp"
            android:background="@drawable/bg_under"
            android:gravity="center_horizontal"
            android:paddingBottom="10sp"
            android:paddingTop="10sp" >

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_reset_selector"
                android:text="@string/reset"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_selector"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/AutoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tableLayout1"
            android:layout_alignRight="@+id/tableLayout1"
            android:layout_below="@+id/tableLayout1"
            android:text="AutoLogin"
            android:textSize="@dimen/textsize" />

    </RelativeLayout>

</RelativeLayout>